# Oxygen

./: .clang-format  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cliff.toml
.github/workflows/: git-cliff.yml
docs/: GRAMMER.md
examples/: example.o2
include/: arena_allocator.hpp
src/: main.cpp
src/error_handling/: error_handling.cpp  error_handling.hpp
src/generator/: generator.cpp  generator.hpp
src/logging/: logging.cpp  logging.hpp
src/parser/: parser.cpp  parser.hpp
src/tokenizer/: tokenizer.cpp  tokenizer.hpp
